[MEM-62] Add: /image endpoint
