# docs/swagger.json
@@ -152,6 +152,58 @@
                 }
             }
         },
+        "/mentor/image": {
+            "post": {
+                "description": "Upload your best photo",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mentor"
+                ],
+                "summary": "Upload Image",
+                "parameters": [
+                    {
+                        "description": "base64",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/PostImageRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/Image"
+                        }
+                    },
+                    "400": {
+                        "description": "error occurred",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "error occurred",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/mentor/{id}": {
             "get": {
                 "description": "Give you mentor without personal fields",
@@ -359,6 +411,12 @@
                 "technology"
             ],
             "properties": {
+                "144x144": {
+                    "type": "string"
+                },
+                "512x512": {
+                    "type": "string"
+                },
                 "_id": {
                     "type": "string"
                 },
@@ -429,6 +487,17 @@
                 }
             }
         },
+        "Image": {
+            "type": "object",
+            "properties": {
+                "144x144": {
+                    "type": "string"
+                },
+                "512x512": {
+                    "type": "string"
+                }
+            }
+        },
         "Mentor": {
             "type": "object",
             "required": [
@@ -439,6 +508,12 @@
                 "tariff"
             ],
             "properties": {
+                "144x144": {
+                    "type": "string"
+                },
+                "512x512": {
+                    "type": "string"
+                },
                 "_id": {
                     "type": "string"
                 },
@@ -526,6 +601,14 @@
                 }
             }
         },
+        "PostImageRequest": {
+            "type": "object",
+            "properties": {
+                "base64": {
+                    "type": "string"
+                }
+            }
+        },
         "PostMentorRequest": {
             "type": "object",
             "properties": {
@@ -580,6 +663,12 @@
                 "technology"
             ],
             "properties": {
+                "144x144": {
+                    "type": "string"
+                },
+                "512x512": {
+                    "type": "string"
+                },
                 "_id": {
                     "type": "string"
                 },
