# pkg/handler/image.go
@@ -2,23 +2,26 @@ package handler
 
 import (
 	"context"
-	"github.com/cloudinary/cloudinary-go/v2"
-	"github.com/cloudinary/cloudinary-go/v2/api/uploader"
-	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
 	"github.com/sirupsen/logrus"
 	mementor_back "mementor-back"
 	"net/http"
 )
 
-type PostImageResponse struct {
-	FullImage  string `json:"256x256"`
-	SmallImage string `json:"72x72"`
-}
-
+// @Summary     Upload Image
+// @Description Upload your best photo
+// @Secure      ApiAuthKey
+// @Tags        mentor
+// @Accept      json
+// @Produce     json
+// @Param       user body     mementor_back.PostImage true "base64"
+// @Success     200  {object} mementor_back.Image "ok"
+// @Failure     400  {object} mementor_back.Message "error occurred"
+// @Failure     401  {object} mementor_back.Message "Unauthorized"
+// @Failure     500  {object} mementor_back.Message "error occurred"
+// @Router      /mentor/image [post]
 func (h *Handler) PostImage(c echo.Context) error {
 	var req mementor_back.PostImage
-	var resp PostImageResponse
 	req.Id = &h.UserId
 
 	err := c.Bind(&req)
@@ -30,21 +33,7 @@ func (h *Handler) PostImage(c echo.Context) error {
 		return err
 	}
 
-	cld, err := cloudinary.NewFromParams("dnpjr8yvk", "345764535751477", "C4au6sUKzqT_beAC0zYvz712p1Y")
-	if err != nil {
-		sentError := c.JSON(http.StatusInternalServerError, mementor_back.Message{Message: err.Error()})
-		if sentError != nil {
-			logrus.Error(sentError)
-		}
-		return err
-	}
-	cld.Config.URL.Secure = true
-
-	ImagePublicId := uuid.New().String()
-
-	_, err = cld.Upload.Upload(context.Background(), req.Base64, uploader.UploadParams{
-		PublicID: ImagePublicId,
-	})
+	image, err := h.Services.Image.NewImage(context.Background(), req)
 	if err != nil {
 		sentError := c.JSON(http.StatusInternalServerError, mementor_back.Message{Message: err.Error()})
 		if sentError != nil {
@@ -53,38 +42,5 @@ func (h *Handler) PostImage(c echo.Context) error {
 		return err
 	}
 
-	Image, err := cld.Image(ImagePublicId)
-	if err != nil {
-		sentError := c.JSON(http.StatusInternalServerError, mementor_back.Message{Message: err.Error()})
-		if sentError != nil {
-			logrus.Error(sentError)
-		}
-		return err
-	}
-
-	Image.Transformation = "h_256,w_256"
-
-	Image256, err := Image.String()
-	if err != nil {
-		sentError := c.JSON(http.StatusInternalServerError, mementor_back.Message{Message: err.Error()})
-		if sentError != nil {
-			logrus.Error(sentError)
-		}
-		return err
-	}
-
-	resp.FullImage = Image256
-
-	Image.Transformation = "h_72,w_72"
-	Image72, err := Image.String()
-	if err != nil {
-		sentError := c.JSON(http.StatusInternalServerError, mementor_back.Message{Message: err.Error()})
-		if sentError != nil {
-			logrus.Error(sentError)
-		}
-		return err
-	}
-	resp.SmallImage = Image72
-
-	return c.JSON(200, resp)
+	return c.JSON(http.StatusOK, image)
 }
